--- a/unknown_qjibis.xfer.json
+++ b/unknown_qjibis.xfer.json
@@ -1,28 +1,27 @@
 {
 	"_id": "unknown_qjibis.xfer",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "skip",
 	"script": "unknown_qjibis.xfer",
 	"sector": "VNP_9399",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569113719750,
+	"last_scraped": 1569118886007,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569107981490,
-	"edit": 4,
-	"scrape_ct": 3,
-	"next_scrape": 1569113779750,
+	"updt": 1569113848324,
+	"edit": 5,
+	"next_scrape": 1569159184796,
 	"category": "clicker",
-	"last_update": 1569113719750,
+	"last_update": 1569118886007,
 	"output": [
 		{
 			"args": {},
-			"calls": 25684,
+			"calls": 33432,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"lack ",
@@ -61,7 +60,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 39664,
+			"calls": 46824,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"lack ",
@@ -100,7 +99,7 @@
 			"args": {
 				"CLICK": true
 			},
-			"calls": 5570,
+			"calls": 6738,
 			"base": "`LCLICK SECURED`",
 			"fragments": [
 				"lack ",
