--- a/unknown_5rw4mm.casino.json
+++ b/unknown_5rw4mm.casino.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_5rw4mm.casino",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_5rw4mm.casino",
 	"sector": "VNP_1006",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1562546094913
+		},
+		{
+			"type": "died",
+			"when": 1569120186625
 		}
 	],
 	"next_scrape": 1568756320978,
@@ -1475,8 +1479,8 @@
 			]
 		}
 	],
-	"updt": 1568694316137,
-	"edit": 33,
+	"updt": 1568714841910,
+	"edit": 34,
 	"identified": [
 		{
 			"document": "NOT FOUND",
