--- a/uknown_musmb6.bot_scam_do_not_run.json
+++ b/uknown_musmb6.bot_scam_do_not_run.json
@@ -1,28 +1,28 @@
 {
 	"_id": "uknown_musmb6.bot_scam_do_not_run",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "skip",
 	"script": "uknown_musmb6.bot_scam_do_not_run",
 	"sector": "NGC_2868",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569115248940,
+	"last_scraped": 1569119768201,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569110235125,
-	"edit": 4,
-	"scrape_ct": 12,
-	"next_scrape": 1569115308940,
+	"updt": 1569115425134,
+	"edit": 5,
+	"scrape_ct": 11,
+	"next_scrape": 1569119828201,
 	"category": "fishie_tank",
-	"last_update": 1569115248940,
+	"last_update": 1569119809787,
 	"output": [
 		{
 			"args": {},
-			"calls": 25178,
+			"calls": 33091,
 			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
 			"fragments": [
 				"ythin",
@@ -52,7 +52,7 @@
 			"args": {
 				"do": "feed"
 			},
-			"calls": 3211,
+			"calls": 4768,
 			"base": [
 				"Fishies are happy.",
 				"actuly they look fine",
@@ -126,6 +126,11 @@
 				"CT0XF227",
 				"BC7D173\\n"
 			]
+		}
+	],
+	"retry_args": [
+		{
+			"do": "clean"
 		}
 	]
 }
