--- a/unknown_xotwor.pin.json
+++ b/unknown_xotwor.pin.json
@@ -1,28 +1,28 @@
 {
 	"_id": "unknown_xotwor.pin",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "skip",
 	"script": "unknown_xotwor.pin",
 	"sector": "HJG_8314",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569114906214,
+	"last_scraped": 1569119588225,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569109783377,
-	"edit": 5,
-	"scrape_ct": 11,
-	"next_scrape": 1569114966214,
+	"updt": 1569115425134,
+	"edit": 6,
+	"scrape_ct": 8,
+	"next_scrape": 1569119648225,
 	"category": "fishie_tank",
-	"last_update": 1569114906214,
+	"last_update": 1569119588225,
 	"output": [
 		{
 			"args": {},
-			"calls": 28942,
+			"calls": 33357,
 			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
 			"fragments": [
 				"will.",
@@ -52,7 +52,7 @@
 			"args": {
 				"do": "feed"
 			},
-			"calls": 3042,
+			"calls": 4165,
 			"base": [
 				"Fishies are happy.",
 				"actuly they look fine",
@@ -87,7 +87,7 @@
 			"args": {
 				"do": "clean"
 			},
-			"calls": 37240,
+			"calls": 44696,
 			"base": "Fishies are happy. Algea eaters are displeased.",
 			"fragments": [
 				"will.",
