--- a/anonymous_gbk0nx.premium_help.json
+++ b/anonymous_gbk0nx.premium_help.json
@@ -1,28 +1,27 @@
 {
 	"_id": "anonymous_gbk0nx.premium_help",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "anonymous_gbk0nx.premium_help",
 	"sector": "NGC_5711",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569118071770,
+	"last_scraped": 1569122179844,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569112942383,
-	"edit": 7,
-	"scrape_ct": 2,
-	"next_scrape": 1569118131770,
+	"updt": 1569118128303,
+	"edit": 8,
+	"next_scrape": 1569168751113,
 	"category": "clicker",
-	"last_update": 1569118071770,
+	"last_update": 1569122179844,
 	"output": [
 		{
 			"args": {},
-			"calls": 35783,
+			"calls": 43230,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"ST0X7",
@@ -61,7 +60,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 34265,
+			"calls": 41259,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"ST0X7",
@@ -100,7 +99,7 @@
 			"args": {
 				"CLICK": true
 			},
-			"calls": 2421,
+			"calls": 3500,
 			"base": "`LCLICK SECURED`",
 			"fragments": [
 				"ST0X7",
