--- a/unknown_puquph.weather.json
+++ b/unknown_puquph.weather.json
@@ -6,23 +6,23 @@
 	"sector": "NGC_1025",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569117468093,
+	"last_scraped": 1569121699046,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569112266275,
-	"edit": 5,
-	"scrape_ct": 15,
-	"next_scrape": 1569117528093,
+	"updt": 1569117678456,
+	"edit": 6,
+	"scrape_ct": 13,
+	"next_scrape": 1569121759046,
 	"category": "coin_flipper",
-	"last_update": 1569117468093,
+	"last_update": 1569121699046,
 	"output": [
 		{
 			"args": {},
-			"calls": 35693,
+			"calls": 44905,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"ses. T",
@@ -31,7 +31,11 @@
 				"ir reli",
 				"as a co",
 				"technolo",
-				"e disrup"
+				"reliance",
+				"e disrup",
+				"derived ",
+				" their r",
+				" counsel"
 			],
 			"hits": [
 				{
