--- a/unknown_mwv1a9.paypal.json
+++ b/unknown_mwv1a9.paypal.json
@@ -1,28 +1,27 @@
 {
 	"_id": "unknown_mwv1a9.paypal",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "unknown_mwv1a9.paypal",
 	"sector": "VNP_9399",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569118823782,
+	"last_scraped": 1569122894319,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569113848324,
-	"edit": 5,
-	"scrape_ct": 3,
-	"next_scrape": 1569118883782,
+	"updt": 1569119031713,
+	"edit": 6,
+	"next_scrape": 1569167871290,
 	"category": "clicker",
-	"last_update": 1569118823782,
+	"last_update": 1569122894319,
 	"output": [
 		{
 			"args": {},
-			"calls": 32008,
+			"calls": 38727,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"stmas.",
@@ -52,7 +51,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 51174,
+			"calls": 59125,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"stmas.",
@@ -82,7 +81,7 @@
 			"args": {
 				"CLICK": true
 			},
-			"calls": 5269,
+			"calls": 5905,
 			"base": "`LCLICK SECURED`",
 			"fragments": [
 				"stmas.",
