--- a/unknown_yprlbk.big_red_button.json
+++ b/unknown_yprlbk.big_red_button.json
@@ -1,28 +1,27 @@
 {
 	"_id": "unknown_yprlbk.big_red_button",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "unknown_yprlbk.big_red_button",
 	"sector": "VNP_9399",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569118925438,
+	"last_scraped": 1569122933608,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569113848324,
-	"edit": 5,
-	"scrape_ct": 1,
-	"next_scrape": 1569118985438,
+	"updt": 1569119031713,
+	"edit": 6,
+	"next_scrape": 1569168721994,
 	"category": "clicker",
-	"last_update": 1569118925438,
+	"last_update": 1569122933608,
 	"output": [
 		{
 			"args": {},
-			"calls": 40218,
+			"calls": 44316,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"ubmit",
@@ -50,7 +49,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 38752,
+			"calls": 43176,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"ubmit",
@@ -78,7 +77,7 @@
 			"args": {
 				"CLICK": true
 			},
-			"calls": 4709,
+			"calls": 6290,
 			"base": "`LCLICK SECURED`",
 			"fragments": [
 				"ubmit",
