--- a/unknown_yz5fze.breach.json
+++ b/unknown_yz5fze.breach.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_yz5fze.breach",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "dead",
 	"script": "unknown_yz5fze.breach",
 	"sector": "HJG_9716",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1569127598864
+		},
+		{
+			"type": "died",
+			"when": 1569127853332
 		}
 	],
 	"scrape_ct": 20,
@@ -96,5 +100,7 @@
 				"\\n213A or"
 			]
 		}
-	]
+	],
+	"updt": 1569127825556,
+	"edit": 1
 }
