--- a/unknown_yz5fze.bot_scam_do_not_run.json
+++ b/unknown_yz5fze.bot_scam_do_not_run.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_yz5fze.bot_scam_do_not_run",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_yz5fze.bot_scam_do_not_run",
 	"sector": "HJG_9716",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1569106816695
+		},
+		{
+			"type": "died",
+			"when": 1569127853332
 		}
 	],
 	"scrape_ct": 12,
@@ -143,8 +147,8 @@
 			]
 		}
 	],
-	"updt": 1569112717213,
-	"edit": 3,
+	"updt": 1569112942383,
+	"edit": 4,
 	"identified": [
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
