--- a/uknown_xyhc52.gif.json
+++ b/uknown_xyhc52.gif.json
@@ -1,26 +1,26 @@
 {
 	"_id": "uknown_xyhc52.gif",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "skip",
 	"script": "uknown_xyhc52.gif",
 	"sector": "HJG_9716",
 	"sec_level": 4,
 	"date_added": 1569127848897,
-	"last_scraped": 1569127908811,
+	"last_scraped": 1569131094495,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569127848897
 		}
 	],
-	"scrape_ct": 17,
-	"next_scrape": 1569127968811,
+	"scrape_ct": 14,
+	"next_scrape": 1569131154495,
 	"category": "clicker",
-	"last_update": 1569127908811,
+	"last_update": 1569131094495,
 	"output": [
 		{
 			"args": {},
-			"calls": 7366,
+			"calls": 16949,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"ke wh",
@@ -48,7 +48,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 4136,
+			"calls": 7120,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"ke wh",
@@ -112,6 +112,13 @@
 				"offer a",
 				" measure"
 			]
+		}
+	],
+	"updt": 1569128051469,
+	"edit": 1,
+	"retry_args": [
+		{
+			"CLICK": true
 		}
 	]
 }
