--- a/uknown_vs802j.t1.json
+++ b/uknown_vs802j.t1.json
@@ -1,28 +1,27 @@
 {
 	"_id": "uknown_vs802j.t1",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "skip",
 	"script": "uknown_vs802j.t1",
 	"sector": "VNP_9534",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569128602283,
+	"last_scraped": 1569131757195,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569125569812,
-	"edit": 8,
-	"scrape_ct": 1,
-	"next_scrape": 1569128662283,
+	"updt": 1569128728739,
+	"edit": 9,
+	"next_scrape": 1569176894072,
 	"category": "fishie_tank",
-	"last_update": 1569128602283,
+	"last_update": 1569131788264,
 	"output": [
 		{
 			"args": {},
-			"calls": 65548,
+			"calls": 81188,
 			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
 			"fragments": [
 				"eel a",
@@ -54,7 +53,7 @@
 			"args": {
 				"do": "feed"
 			},
-			"calls": 6585,
+			"calls": 7576,
 			"base": [
 				"Fishies are happy.",
 				"actuly they look fine",
@@ -133,6 +132,11 @@
 				"l thing ",
 				"e old en"
 			]
+		}
+	],
+	"retry_args": [
+		{
+			"do": "clean"
 		}
 	]
 }
