--- a/unknown_5rw4mm.casino.json
+++ b/unknown_5rw4mm.casino.json
@@ -40,9 +40,11 @@
 					"frags": [
 						"01 01",
 						"100 00",
-						"0100 0",
-						"000 00",
-						"00 0000 "
+						"000 000",
+						" 0100 0",
+						"0100 010",
+						"00 0000 ",
+						"0 0000 0"
 					]
 				}
 			]
@@ -68,9 +70,11 @@
 					"frags": [
 						"01 01",
 						"100 00",
-						"0100 0",
-						"000 00",
-						"00 0000 "
+						"000 000",
+						" 0100 0",
+						"0100 010",
+						"00 0000 ",
+						"0 0000 0"
 					]
 				}
 			]
@@ -363,54 +367,72 @@
 					"document": "NOT FOUND",
 					"frags": [
 						"C01 01",
+						"C0000 ",
 						"01 01E",
-						"0 000E",
 						"CK01 01",
+						"CK0000 ",
 						"C100 00",
-						"C0100 0",
-						"C000 00",
+						"C00 010",
 						"C 0000 ",
 						"100 00E",
 						"01 01SE",
 						"000 00E",
-						"0 000SE",
 						"0 0000E",
 						"CK100 00",
-						"CK0100 0",
-						"CK000 00",
-						"CK0 0000",
+						"CK00 010",
 						"CK 01 01",
+						"C000 000",
+						"C 0100 0",
 						"100 00SE",
-						"0100 0SE",
 						"01 01 SE",
 						"000 00SE",
+						"000 000E",
 						"0 0000SE",
+						"CK000 000",
 						"CK S01 01",
+						"CK S0000 ",
+						"CK S00 00",
 						"CK 100 00",
 						"CK 0100 0",
-						"CK 0 0000",
 						"CK  0000 ",
+						"C0100 010",
 						"C00 0000 ",
+						"0100 010E",
 						"0100 0 SE",
 						"01 01K SE",
 						"0000 K SE",
+						"000 000SE",
+						"00 010 SE",
 						"00 0000 E",
 						"0 000K SE",
-						" 0000  SE",
+						" 0100 0SE",
+						"CK0100 010",
 						"CK00 0000 ",
+						"CK0 0000 0",
 						"CK SE01 01",
+						"CK SE0000 ",
+						"CK SE00 00",
 						"CK SE0 000",
 						"CK S100 00",
 						"CK S0100 0",
 						"CK S000 00",
+						"CK S00 010",
 						"CK S0 0000",
 						"CK S 0000 ",
+						"CK 0 0000 ",
+						"CK  0100 0",
 						"100 00K SE",
 						"0100 0K SE",
+						"0100 010SE",
 						"01 01CK SE",
+						"0000 CK SE",
 						"000 00K SE",
+						"00 010K SE",
+						"00 00CK SE",
 						"0 000CK SE",
-						"0 0000K SE"
+						"0 0000K SE",
+						"0 0000 0SE",
+						"0 0000  SE"
 					]
 				}
 			]
@@ -731,52 +753,67 @@
 					"document": "NOT FOUND",
 					"frags": [
 						"K01 01",
+						"K0000 ",
 						"01 01E",
-						"0 000E",
 						"K100 00",
-						"K0100 0",
-						"K000 00",
-						"K0 0000",
+						"K00 010",
 						"K 01 01",
 						"100 00E",
 						"01 01SE",
 						"000 00E",
-						"0 000SE",
 						"0 0000E",
+						"K000 000",
 						"K S01 01",
+						"K S0000 ",
+						"K S00 00",
 						"K 100 00",
 						"K 0100 0",
-						"K 0 0000",
 						"K  0000 ",
 						"100 00SE",
-						"0100 0SE",
 						"01 01 SE",
 						"000 00SE",
+						"000 000E",
 						"0 0000SE",
-						"0 000 SE",
+						"K0100 010",
 						"K00 0000 ",
+						"K0 0000 0",
 						"K SE01 01",
+						"K SE0000 ",
+						"K SE00 00",
 						"K SE0 000",
 						"K S100 00",
 						"K S0100 0",
 						"K S000 00",
+						"K S00 010",
 						"K S0 0000",
 						"K S 0000 ",
+						"K 0 0000 ",
+						"K  0100 0",
 						"100 00 SE",
+						"0100 010E",
 						"0100 0 SE",
 						"01 01K SE",
 						"0000 K SE",
+						"000 000SE",
 						"000 00 SE",
+						"00 010 SE",
 						"00 0000 E",
 						"0 000K SE",
-						" 0000  SE",
+						" 0100 0SE",
 						"100 00K SE",
 						"0100 0K SE",
+						"0100 010SE",
 						"01 01CK SE",
+						"0000 CK SE",
 						"000 00K SE",
+						"000 000 SE",
+						"00 010K SE",
+						"00 00CK SE",
 						"00 0000 SE",
 						"0 000CK SE",
-						"0 0000K SE"
+						"0 0000K SE",
+						"0 0000 0SE",
+						"0 0000  SE"
 					]
 				}
 			]
@@ -866,75 +903,80 @@
 						"01 01E",
 						"CK01 01",
 						"C100 00",
-						"C0100 0",
-						"C0 0000",
+						"C00 010",
 						"100 00E",
-						"0100 0E",
 						"01 01SE",
 						"000 00E",
 						"CK100 00",
-						"CK0100 0",
-						"CK0 0000",
+						"CK00 010",
 						"CK 01 01",
 						"CK 0000 ",
+						"CK 00 00",
+						"C 0100 0",
 						"100 00SE",
-						"0100 0SE",
 						"01 01 SE",
 						"000 00SE",
-						"0 000 SE",
+						" 0100 0E",
 						"CK S01 01",
+						"CK S0000 ",
+						"CK S00 00",
 						"CK 100 00",
 						"CK 0100 0",
-						"CK 000 00",
-						"CK 0 0000",
+						"CK 00 010",
 						"CK  0000 ",
+						"C0100 010",
 						"C00 0000 ",
+						"C0 0000 0",
 						"100 00 SE",
+						"0100 010E",
 						"0100 0 SE",
 						"01 01K SE",
 						"0000 K SE",
 						"000 00 SE",
+						"00 010 SE",
 						"0 000K SE",
-						" 0000  SE",
+						"0 0000 0E",
+						" 0100 0SE",
+						"CK0100 010",
 						"CK00 0000 ",
+						"CK0 0000 0",
 						"CK SE01 01",
+						"CK SE0000 ",
+						"CK SE00 00",
 						"CK SE0 000",
 						"CK S100 00",
 						"CK S0100 0",
 						"CK S000 00",
+						"CK S00 010",
 						"CK S0 0000",
 						"CK S 0000 ",
+						"CK 000 000",
+						"CK 0 0000 ",
+						"CK  0100 0",
 						"100 00K SE",
 						"0100 0K SE",
+						"0100 010SE",
 						"01 01CK SE",
+						"0000 CK SE",
 						"000 00K SE",
+						"000 000 SE",
+						"00 010K SE",
+						"00 00CK SE",
 						"00 0000 SE",
 						"0 000CK SE",
-						"0 0000K SE"
+						"0 0000K SE",
+						"0 0000 0SE",
+						"0 0000  SE"
 					]
 				},
 				{
-					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
-					"frags": [
-						"C ",
-						" E"
-					]
-				},
-				{
-					"document": "MFT0XE1_CLST0X61_SECT0X665E_FILE0X0D96F593",
-					"frags": [
-						"C ",
-						" E"
-					]
-				},
-				{
-					"document": "MFT0XF1_CLST0X75_SECT0X73F7_FILE0X9CB5E952",
+					"document": "MFT0X44_CLST0X35_SECT0XA43B_FILE0XDD1A6B85",
 					"frags": [
 						" E"
 					]
 				},
 				{
-					"document": "MFT0X93_CLST0X0B_SECT0XB1F1_FILE0X17858BD3",
+					"document": "MFT0X3F_CLST0X0A_SECT0X8F99_FILE0XBD88122E",
 					"frags": [
 						" E"
 					]
@@ -976,13 +1018,19 @@
 					]
 				},
 				{
-					"document": "MFT0X44_CLST0X35_SECT0XA43B_FILE0XDD1A6B85",
+					"document": "MFT0X3F_CLST0XD0_SECT0X04CF_FILE0X7ED7C93F",
 					"frags": [
 						" E"
 					]
 				},
 				{
-					"document": "MFT0X3F_CLST0X0A_SECT0X8F99_FILE0XBD88122E",
+					"document": "MFT0XF1_CLST0X75_SECT0X73F7_FILE0X9CB5E952",
+					"frags": [
+						" E"
+					]
+				},
+				{
+					"document": "MFT0X93_CLST0X0B_SECT0XB1F1_FILE0X17858BD3",
 					"frags": [
 						" E"
 					]
@@ -995,6 +1043,12 @@
 				},
 				{
 					"document": "MFT0XA7_CLST0X1F_SECT0X57C3_FILE0X8C911BB8",
+					"frags": [
+						" E"
+					]
+				},
+				{
+					"document": "MFT0XE1_CLST0X61_SECT0X665E_FILE0X0D96F593",
 					"frags": [
 						" E"
 					]
@@ -1036,7 +1090,7 @@
 					]
 				},
 				{
-					"document": "MFT0X3F_CLST0XD0_SECT0X04CF_FILE0X7ED7C93F",
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
 					"frags": [
 						" E"
 					]
@@ -1332,45 +1386,61 @@
 					"document": "NOT FOUND",
 					"frags": [
 						"C01 01",
+						"C0000 ",
 						"01 01S",
-						"0 000S",
 						"CK01 01",
+						"CK0000 ",
 						"C100 00",
-						"C0100 0",
-						"C000 00",
-						"C0 0000",
+						"C00 010",
 						"C 0000 ",
 						"100 00S",
-						"0100 0S",
 						"01 01 S",
 						"000 00S",
 						"0 0000S",
-						"0 000 S",
 						"CK100 00",
-						"CK0100 0",
-						"CK000 00",
-						"CK0 0000",
+						"CK00 010",
+						"C000 000",
+						"C 0100 0",
 						"100 00 S",
 						"0100 0 S",
 						"01 01K S",
 						"0000 K S",
+						"000 000S",
 						"000 00 S",
-						" 0000  S",
+						"00 010 S",
+						" 0100 0S",
+						"CK000 000",
 						"CK S01 01",
+						"CK S0000 ",
+						"CK S00 00",
 						"CK 100 00",
 						"CK  0000 ",
+						"C0100 010",
 						"C00 0000 ",
+						"C0 0000 0",
+						"0100 010S",
 						"01 01CK S",
+						"0000 CK S",
+						"000 000 S",
+						"00 00CK S",
 						"00 0000 S",
 						"0 000CK S",
+						"0 0000 0S",
+						"0 0000  S",
+						"CK0100 010",
 						"CK00 0000 ",
+						"CK0 0000 0",
 						"CK SE01 01",
+						"CK SE0000 ",
+						"CK SE00 00",
 						"CK SE0 000",
 						"CK S100 00",
 						"CK S0100 0",
 						"CK S000 00",
+						"CK S00 010",
 						"CK S0 0000",
-						"CK S 0000 "
+						"CK S 0000 ",
+						"CK  0100 0"
 					]
 				}
 			]
@@ -1421,6 +1491,52 @@
 				"CK 000 000",
 				"CK 0 0000 ",
 				"CK  0100 0"
+			],
+			"hits": [
+				{
+					"document": "NOT FOUND",
+					"frags": [
+						"C0000 ",
+						"C00 00",
+						"00 00 ",
+						"CK0000 ",
+						"CK00 00",
+						"C00 010",
+						"0100 0 ",
+						"0000 K ",
+						"00 010 ",
+						"00 00K ",
+						"0 000K ",
+						"CK00 010",
+						"CK 0000 ",
+						"CK 00 00",
+						"C000 000",
+						"C 0100 0",
+						"0000 CK ",
+						"000 000 ",
+						"00 010K ",
+						"00 00CK ",
+						"0 000CK ",
+						"0 0000  ",
+						"CK000 000",
+						"CK S0000 ",
+						"CK S00 00",
+						"CK S0 000",
+						"CK 0100 0",
+						"CK 00 010",
+						"C0100 010",
+						"C0 0000 0",
+						"CK0100 010",
+						"CK0 0000 0",
+						"CK SE0000 ",
+						"CK SE00 00",
+						"CK SE0 000",
+						"CK S00 010",
+						"CK 000 000",
+						"CK 0 0000 ",
+						"CK  0100 0"
+					]
+				}
 			]
 		},
 		{
@@ -1476,68 +1592,279 @@
 				"ICK 000 000",
 				"ICK 0 0000 ",
 				"ICK  0100 0"
+			],
+			"hits": [
+				{
+					"document": "NOT FOUND",
+					"frags": [
+						"I0 ",
+						" 00E",
+						"IC00 00",
+						"I00 010",
+						"00 00SE",
+						"ICK00 00",
+						"IC00 010",
+						"I 0100 0",
+						"00 00 SE",
+						" 0100 0E",
+						"ICK00 010",
+						"ICK 0000 ",
+						"ICK 00 00",
+						"IC 0100 0",
+						"I0100 010",
+						"0100 010E",
+						"0100 0 SE",
+						"0000 K SE",
+						"00 010 SE",
+						"00 00K SE",
+						"0 000K SE",
+						" 0100 0SE",
+						"ICK S0000 ",
+						"ICK S00 00",
+						"ICK S0 000",
+						"ICK 0100 0",
+						"ICK 00 010",
+						"IC0100 010",
+						"IC0 0000 0",
+						"0100 010SE",
+						"0000 CK SE",
+						"00 010K SE",
+						"00 00CK SE",
+						"0 000CK SE",
+						"0 0000 0SE",
+						"0 0000  SE",
+						"ICK0100 010",
+						"ICK0 0000 0",
+						"ICK SE0000 ",
+						"ICK SE00 00",
+						"ICK SE0 000",
+						"ICK S00 010",
+						"ICK 000 000",
+						"ICK 0 0000 ",
+						"ICK  0100 0"
+					]
+				},
+				{
+					"document": "MFT0X44_CLST0X35_SECT0XA43B_FILE0XDD1A6B85",
+					"frags": [
+						" E"
+					]
+				},
+				{
+					"document": "MFT0X3F_CLST0X0A_SECT0X8F99_FILE0XBD88122E",
+					"frags": [
+						" E"
+					]
+				},
+				{
+					"document": "MFT0X82_CLST0X69_SECT0X885F_FILE0X8C8517B2",
+					"frags": [
+						" E"
+					]
+				},
+				{
+					"document": "MFT0XCE_CLST0X15_SECT0XAD0C_FILE0X77AB550B",
+					"frags": [
+						" E"
+					]
+				},
+				{
+					"document": "MFT0XE7_CLST0X7B_SECT0X8CA8_FILE0X5C879769",
+					"frags": [
+						" E"
+					]
+				},
+				{
+					"document": "MFT0X00_CLST0XF3_SECT0X756A_FILE0XBBE270FC",
+					"frags": [
+						" E"
+					]
+				},
+				{
+					"document": "MFT0X71_CLST0X8A_SECT0X7356_FILE0X14AFF93F",
+					"frags": [
+						" E"
+					]
+				},
+				{
+					"document": "MFT0XD1_CLST0X95_SECT0X23E7_FILE0X8CAB060B",
+					"frags": [
+						" E"
+					]
+				},
+				{
+					"document": "MFT0X3F_CLST0XD0_SECT0X04CF_FILE0X7ED7C93F",
+					"frags": [
+						" E"
+					]
+				},
+				{
+					"document": "MFT0XF1_CLST0X75_SECT0X73F7_FILE0X9CB5E952",
+					"frags": [
+						" E"
+					]
+				},
+				{
+					"document": "MFT0X93_CLST0X0B_SECT0XB1F1_FILE0X17858BD3",
+					"frags": [
+						" E"
+					]
+				},
+				{
+					"document": "MFT0XF4_CLST0XCC_SECT0X7BE4_FILE0XE2A8BDD4",
+					"frags": [
+						" E"
+					]
+				},
+				{
+					"document": "MFT0XA7_CLST0X1F_SECT0X57C3_FILE0X8C911BB8",
+					"frags": [
+						" E"
+					]
+				},
+				{
+					"document": "MFT0XE1_CLST0X61_SECT0X665E_FILE0X0D96F593",
+					"frags": [
+						" E"
+					]
+				},
+				{
+					"document": "MFT0XA2_CLST0XE0_SECT0XF623_FILE0XCC32859D",
+					"frags": [
+						" E"
+					]
+				},
+				{
+					"document": "MFT0XD7_CLST0XF7_SECT0X1D2F_FILE0X3A848D07",
+					"frags": [
+						" E"
+					]
+				},
+				{
+					"document": "MFT0XCF_CLST0X84_SECT0X6B58_FILE0X7A81819D",
+					"frags": [
+						" E"
+					]
+				},
+				{
+					"document": "MFT0X68_CLST0XCA_SECT0X0F5F_FILE0X87AF16DE",
+					"frags": [
+						" E"
+					]
+				},
+				{
+					"document": "Erin File",
+					"frags": [
+						" E"
+					]
+				},
+				{
+					"document": "Essence",
+					"frags": [
+						" E"
+					]
+				},
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						" E"
+					]
+				}
 			]
 		}
 	],
-	"updt": 1568714841910,
-	"edit": 34,
+	"updt": 1569120383915,
+	"edit": 35,
 	"identified": [
 		{
 			"document": "NOT FOUND",
 			"frags": [
+				"I0 ",
 				"C01 01",
-				"0 000E",
+				"C0000 ",
+				"IC00 00",
+				"I00 010",
 				"CK01 01",
+				"CK0000 ",
 				"C100 00",
-				"C0100 0",
-				"C000 00",
-				"C0 0000",
 				"C 0000 ",
 				"100 00C",
 				"0100 0C",
 				"01 01EC",
 				"000 00C",
 				"0 0000E",
+				"ICK00 00",
+				"IC00 010",
+				"I 0100 0",
 				"CK100 00",
-				"CK0100 0",
-				"CK000 00",
-				"CK0 0000",
 				"CK 01 01",
-				"CK 0000 ",
+				"C000 000",
 				"100 00EC",
 				"0100 0EC",
 				"01 01SEC",
 				"000 00EC",
+				"000 000E",
 				"0 000SEC",
+				" 0100 0E",
+				"ICK00 010",
+				"ICK 0000 ",
+				"ICK 00 00",
+				"IC 0100 0",
+				"I0100 010",
+				"CK000 000",
 				"CK S01 01",
 				"CK 100 00",
-				"CK 0100 0",
-				"CK 000 00",
-				"CK 0 0000",
 				"CK  0000 ",
 				"C00 0000 ",
 				"100 00SEC",
 				"0100 0SEC",
+				"0100 010E",
 				"01 01 SEC",
 				"000 00SEC",
+				"000 000SE",
+				"00 010 SE",
 				"0 0000SEC",
+				"0 0000 0E",
 				"0 000 SEC",
+				" 0100 0SE",
+				"ICK S0000 ",
+				"ICK S00 00",
+				"ICK S0 000",
+				"ICK 0100 0",
+				"ICK 00 010",
+				"IC0100 010",
+				"IC0 0000 0",
 				"CK00 0000 ",
 				"CK SE01 01",
-				"CK SE0 000",
 				"CK S100 00",
 				"CK S0100 0",
 				"CK S000 00",
 				"CK S0 0000",
 				"CK S 0000 ",
 				"100 00 SEC",
+				"0100 010SE",
 				"0100 0 SEC",
 				"01 01K SEC",
 				"0000 K SEC",
+				"0000 CK SE",
+				"000 000 SE",
 				"000 00 SEC",
+				"00 010K SE",
+				"00 00CK SE",
 				"00 0000 EC",
 				"0 000K SEC",
+				"0 0000 0SE",
+				"0 0000  SE",
 				" 0000  SEC",
+				"ICK0100 010",
+				"ICK0 0000 0",
+				"ICK SE0000 ",
+				"ICK SE00 00",
+				"ICK SE0 000",
+				"ICK S00 010",
+				"ICK 000 000",
+				"ICK 0 0000 ",
+				"ICK  0100 0",
 				"100 00K SEC",
 				"0100 0K SEC",
 				"01 01CK SEC",
@@ -1545,14 +1872,6 @@
 				"00 0000 SEC",
 				"0 000CK SEC",
 				"0 0000K SEC"
-			]
-		},
-		{
-			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
-			"frags": [
-				"C ",
-				" E",
-				" C"
 			]
 		},
 		{
@@ -1577,6 +1896,13 @@
 			]
 		},
 		{
+			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+			"frags": [
+				" E",
+				" C"
+			]
+		},
+		{
 			"document": "MFT0XA7_CLST0X1F_SECT0X57C3_FILE0X8C911BB8",
 			"frags": [
 				" E",
@@ -1591,13 +1917,6 @@
 			]
 		},
 		{
-			"document": "MFT0XE1_CLST0X61_SECT0X665E_FILE0X0D96F593",
-			"frags": [
-				"C ",
-				" E"
-			]
-		},
-		{
 			"document": "MFT0X44_CLST0X35_SECT0XA43B_FILE0XDD1A6B85",
 			"frags": [
 				" E",
@@ -1605,7 +1924,7 @@
 			]
 		},
 		{
-			"document": "MFT0X93_CLST0X0B_SECT0XB1F1_FILE0X17858BD3",
+			"document": "MFT0X3F_CLST0X0A_SECT0X8F99_FILE0XBD88122E",
 			"frags": [
 				" E"
 			]
@@ -1617,13 +1936,13 @@
 			]
 		},
 		{
-			"document": "MFT0X3F_CLST0XD0_SECT0X04CF_FILE0X7ED7C93F",
+			"document": "MFT0XCE_CLST0X15_SECT0XAD0C_FILE0X77AB550B",
 			"frags": [
 				" E"
 			]
 		},
 		{
-			"document": "MFT0X00_CLST0XF3_SECT0X756A_FILE0XBBE270FC",
+			"document": "Essence",
 			"frags": [
 				" E"
 			]
@@ -1635,13 +1954,25 @@
 			]
 		},
 		{
-			"document": "MFT0X3F_CLST0X0A_SECT0X8F99_FILE0XBD88122E",
+			"document": "MFT0X3F_CLST0XD0_SECT0X04CF_FILE0X7ED7C93F",
+			"frags": [
+				" E"
+			]
+		},
+		{
+			"document": "MFT0X93_CLST0X0B_SECT0XB1F1_FILE0X17858BD3",
 			"frags": [
 				" E"
 			]
 		},
 		{
 			"document": "MFT0XF4_CLST0XCC_SECT0X7BE4_FILE0XE2A8BDD4",
+			"frags": [
+				" E"
+			]
+		},
+		{
+			"document": "MFT0XE1_CLST0X61_SECT0X665E_FILE0X0D96F593",
 			"frags": [
 				" E"
 			]
@@ -1671,13 +2002,7 @@
 			]
 		},
 		{
-			"document": "Essence",
-			"frags": [
-				" E"
-			]
-		},
-		{
-			"document": "MFT0XCE_CLST0X15_SECT0XAD0C_FILE0X77AB550B",
+			"document": "MFT0X00_CLST0XF3_SECT0X756A_FILE0XBBE270FC",
 			"frags": [
 				" E"
 			]
