--- a/uknown_71chos.breach.json
+++ b/uknown_71chos.breach.json
@@ -1,28 +1,27 @@
 {
 	"_id": "uknown_71chos.breach",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "uknown_71chos.breach",
 	"sector": "NGC_6016",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569130833779,
+	"last_scraped": 1569134064226,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569127825556,
-	"edit": 8,
-	"scrape_ct": 2,
-	"next_scrape": 1569130893779,
+	"updt": 1569131208009,
+	"edit": 9,
+	"next_scrape": 1569176539960,
 	"category": "fishie_tank",
-	"last_update": 1569130833779,
+	"last_update": 1569134064226,
 	"output": [
 		{
 			"args": {},
-			"calls": 48170,
+			"calls": 53417,
 			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
 			"fragments": [
 				"4B of",
@@ -52,7 +51,7 @@
 			"args": {
 				"do": "feed"
 			},
-			"calls": 7338,
+			"calls": 7811,
 			"base": [
 				"Fishies are happy.",
 				"actuly they look fine",
@@ -87,7 +86,7 @@
 			"args": {
 				"do": "clean"
 			},
-			"calls": 69183,
+			"calls": 77747,
 			"base": "Fishies are happy. Algea eaters are displeased.",
 			"fragments": [
 				"4B of",
