--- a/unknown_puquph.weather.json
+++ b/unknown_puquph.weather.json
@@ -6,23 +6,23 @@
 	"sector": "NGC_1025",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569131997721,
+	"last_scraped": 1569135151041,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569128953055,
-	"edit": 9,
-	"scrape_ct": 9,
-	"next_scrape": 1569132057721,
+	"updt": 1569132111112,
+	"edit": 10,
+	"scrape_ct": 7,
+	"next_scrape": 1569135211041,
 	"category": "coin_flipper",
-	"last_update": 1569131997721,
+	"last_update": 1569135151041,
 	"output": [
 		{
 			"args": {},
-			"calls": 70963,
+			"calls": 81479,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"ses. T",
@@ -46,7 +46,11 @@
 						"ir reli",
 						"as a co",
 						"technolo",
-						"e disrup"
+						"reliance",
+						"e disrup",
+						"derived ",
+						" their r",
+						" counsel"
 					]
 				},
 				{
@@ -67,7 +71,11 @@
 				"ir reli",
 				"as a co",
 				"technolo",
-				"e disrup"
+				"reliance",
+				"e disrup",
+				"derived ",
+				" their r",
+				" counsel"
 			]
 		},
 		{
