--- a/uknown_w9gygr.tryhard.json
+++ b/uknown_w9gygr.tryhard.json
@@ -1,28 +1,27 @@
 {
 	"_id": "uknown_w9gygr.tryhard",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "skip",
 	"script": "uknown_w9gygr.tryhard",
 	"sector": "VNP_9399",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569132741664,
+	"last_scraped": 1569136041355,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569129854450,
-	"edit": 10,
-	"scrape_ct": 1,
-	"next_scrape": 1569132801664,
+	"updt": 1569132787530,
+	"edit": 11,
+	"next_scrape": 1569176782923,
 	"category": "fishie_tank",
-	"last_update": 1569132741664,
+	"last_update": 1569136041355,
 	"output": [
 		{
 			"args": {},
-			"calls": 62887,
+			"calls": 80613,
 			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
 			"fragments": [
 				"racks",
@@ -52,7 +51,7 @@
 			"args": {
 				"do": "feed"
 			},
-			"calls": 6663,
+			"calls": 7553,
 			"base": [
 				"Fishies are happy.",
 				"actuly they look fine",
@@ -87,7 +86,7 @@
 			"args": {
 				"do": "clean"
 			},
-			"calls": 58479,
+			"calls": 65938,
 			"base": "Fishies are happy. Algea eaters are displeased.",
 			"fragments": [
 				"racks",
