--- a/anonymous_gbk0nx.premium_help.json
+++ b/anonymous_gbk0nx.premium_help.json
@@ -13,8 +13,8 @@
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569118128303,
-	"edit": 8,
+	"updt": 1569122190226,
+	"edit": 9,
 	"next_scrape": 1569168751113,
 	"category": "clicker",
 	"last_update": 1569122179844,
@@ -47,11 +47,22 @@
 					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
 					"frags": [
 						"ST0X7",
+						" Just",
 						"XBF_CL",
+						"SECT0X",
+						"CLST0X",
 						"ECT0XF2",
+						"D172\\nA",
+						"A_SECT0",
+						"7_FILE0",
+						"2BC7D17",
 						"_FILE0X2",
+						"\\nAD031E",
+						"XF227_FI",
+						"T0XF227_",
 						"MFT0XBF_",
-						"ILE0X2BC"
+						"ILE0X2BC",
+						"2\\nAD031"
 					]
 				}
 			]
@@ -86,11 +97,22 @@
 					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
 					"frags": [
 						"ST0X7",
+						" Just",
 						"XBF_CL",
+						"SECT0X",
+						"CLST0X",
 						"ECT0XF2",
+						"D172\\nA",
+						"A_SECT0",
+						"7_FILE0",
+						"2BC7D17",
 						"_FILE0X2",
+						"\\nAD031E",
+						"XF227_FI",
+						"T0XF227_",
 						"MFT0XBF_",
-						"ILE0X2BC"
+						"ILE0X2BC",
+						"2\\nAD031"
 					]
 				}
 			]
@@ -125,11 +147,22 @@
 					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
 					"frags": [
 						"ST0X7",
+						" Just",
 						"XBF_CL",
+						"SECT0X",
+						"CLST0X",
 						"ECT0XF2",
+						"D172\\nA",
+						"A_SECT0",
+						"7_FILE0",
+						"2BC7D17",
 						"_FILE0X2",
+						"\\nAD031E",
+						"XF227_FI",
+						"T0XF227_",
 						"MFT0XBF_",
-						"ILE0X2BC"
+						"ILE0X2BC",
+						"2\\nAD031"
 					]
 				}
 			]
@@ -219,10 +252,63 @@
 				" LE0X2BC",
 				" FILE0X2",
 				" ECT0XF2"
+			],
+			"hits": [
+				{
+					"document": "NOT FOUND",
+					"frags": [
+						"ST0X7 ",
+						" ST0X7",
+						"XBF_CL ",
+						"ST0X7K ",
+						" XBF_CL",
+						" SST0X7",
+						"XBF_CLK ",
+						"ST0X7CK ",
+						"LE0X2BC ",
+						"FILE0X2 ",
+						"ECT0XF2 ",
+						" SXBF_CL",
+						" SEST0X7",
+						" LE0X2BC",
+						" FILE0X2",
+						" ECT0XF2"
+					]
+				},
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"_FILE0X2",
+						"MFT0XBF_",
+						"ILE0X2BC"
+					]
+				}
 			]
 		}
 	],
 	"identified": [
+		{
+			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+			"frags": [
+				"ST0X7",
+				" Just",
+				"XBF_CL",
+				"SECT0X",
+				"CLST0X",
+				"ECT0XF2",
+				"D172\\nA",
+				"A_SECT0",
+				"7_FILE0",
+				"2BC7D17",
+				"_FILE0X2",
+				"\\nAD031E",
+				"XF227_FI",
+				"T0XF227_",
+				"MFT0XBF_",
+				"ILE0X2BC",
+				"2\\nAD031"
+			]
+		},
 		{
 			"document": "NOT FOUND",
 			"frags": [
@@ -242,17 +328,6 @@
 				" LE0X2BC",
 				" FILE0X2",
 				" ECT0XF2"
-			]
-		},
-		{
-			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
-			"frags": [
-				"ST0X7",
-				"XBF_CL",
-				"ECT0XF2",
-				"_FILE0X2",
-				"MFT0XBF_",
-				"ILE0X2BC"
 			]
 		}
 	]
