--- a/uknown_bofn3d.external_yg40iz.json
+++ b/uknown_bofn3d.external_yg40iz.json
@@ -13,8 +13,8 @@
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569132336958,
-	"edit": 10,
+	"updt": 1569135492991,
+	"edit": 11,
 	"scrape_ct": 6,
 	"next_scrape": 1569135405208,
 	"category": "plant_sim",
@@ -60,6 +60,20 @@
 				"2062. E",
 				"d to hav",
 				"al asset"
+			],
+			"hits": [
+				{
+					"document": "Erin File",
+					"frags": [
+						"ly 28",
+						"OS/Co",
+						" and c",
+						"e') and",
+						"2062. E",
+						"d to hav",
+						"al asset"
+					]
+				}
 			]
 		}
 	],
