--- a/unknown_uzgzcp.config.json
+++ b/unknown_uzgzcp.config.json
@@ -1,26 +1,26 @@
 {
 	"_id": "unknown_uzgzcp.config",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "skip",
 	"script": "unknown_uzgzcp.config",
 	"sector": "SPC_0993",
 	"sec_level": 4,
 	"date_added": 1569135317544,
-	"last_scraped": 1569135384845,
+	"last_scraped": 1569138280603,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569135317544
 		}
 	],
-	"scrape_ct": 17,
-	"next_scrape": 1569135444845,
+	"scrape_ct": 14,
+	"next_scrape": 1569138340603,
 	"category": "clicker",
-	"last_update": 1569135384845,
+	"last_update": 1569138280603,
 	"output": [
 		{
 			"args": {},
-			"calls": 5202,
+			"calls": 13386,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"stion",
@@ -48,7 +48,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 7843,
+			"calls": 12372,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"stion",
@@ -112,6 +112,13 @@
 				"e?\\n1E",
 				"E43 I "
 			]
+		}
+	],
+	"updt": 1569135492991,
+	"edit": 1,
+	"retry_args": [
+		{
+			"CLICK": true
 		}
 	]
 }
