--- a/uknown_864wmx.t1.json
+++ b/uknown_864wmx.t1.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_864wmx.t1",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "uknown_864wmx.t1",
 	"sector": "K_2217",
 	"sec_level": 4,
 	"date_added": 1563311793098,
-	"last_scraped": 1569137434332,
+	"last_scraped": 1569140005570,
 	"script_log": [
 		{
 			"type": "added",
@@ -21,17 +21,16 @@
 			}
 		]
 	],
-	"updt": 1569134364749,
-	"edit": 1456,
+	"updt": 1569140002159,
+	"edit": 1458,
 	"pl_output": "Usage:\n`Nscrape`:`V#s.t1.corp` -- self explanatory. Optionally pass format:true to return the locs formatted for cracking.\n`Ncrack`:`V#s.t1.npc` -- self explanatory.",
-	"next_scrape": 1569137494332,
-	"scrape_ct": 1,
+	"next_scrape": 1569183496574,
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1569137434332,
+	"last_update": 1569140005570,
 	"output": [
 		{
 			"args": {},
-			"calls": 1492056,
+			"calls": 1640216,
 			"base": "Usage:\n`Nscrape`:`V#s.t1.corp` -- self explanatory. Optionally pass format:true to return the locs formatted for cracking.\n`Ncrack`:`V#s.t1.npc` -- self explanatory.",
 			"fragments": [
 				"nervo",
