--- a/uknown_n1rumf.defender_auth.json
+++ b/uknown_n1rumf.defender_auth.json
@@ -1,28 +1,27 @@
 {
 	"_id": "uknown_n1rumf.defender_auth",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "uknown_n1rumf.defender_auth",
 	"sector": "K_0542",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569138399121,
+	"last_scraped": 1569140950153,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569135492991,
-	"edit": 11,
-	"scrape_ct": 2,
-	"next_scrape": 1569138459121,
+	"updt": 1569138426263,
+	"edit": 12,
+	"next_scrape": 1569185363128,
 	"category": "dice_roller",
-	"last_update": 1569138399121,
+	"last_update": 1569140950153,
 	"output": [
 		{
 			"args": {},
-			"calls": 105197,
+			"calls": 121480,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"mited",
