--- a/unknown_8qfkzs.t3scrape.json
+++ b/unknown_8qfkzs.t3scrape.json
@@ -1,28 +1,27 @@
 {
 	"_id": "unknown_8qfkzs.t3scrape",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "unknown_8qfkzs.t3scrape",
 	"sector": "NGC_1025",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569138137846,
+	"last_scraped": 1569140699349,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569135267752,
-	"edit": 11,
-	"scrape_ct": 0,
-	"next_scrape": 1569138197846,
+	"updt": 1569138199176,
+	"edit": 12,
+	"next_scrape": 1569181434453,
 	"category": "dice_roller",
-	"last_update": 1569138137846,
+	"last_update": 1569140699349,
 	"output": [
 		{
 			"args": {},
-			"calls": 96466,
+			"calls": 102865,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"ns ind",
