--- a/unknown_yh1nxh.db.json
+++ b/unknown_yh1nxh.db.json
@@ -6,21 +6,21 @@
 	"sector": "SPC_0993",
 	"sec_level": 4,
 	"date_added": 1569137685058,
-	"last_scraped": 1569137715574,
+	"last_scraped": 1569140348925,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569137685058
 		}
 	],
-	"scrape_ct": 18,
-	"next_scrape": 1569137775574,
+	"scrape_ct": 14,
+	"next_scrape": 1569140408925,
 	"category": "clicker",
-	"last_update": 1569137715574,
+	"last_update": 1569140348925,
 	"output": [
 		{
 			"args": {},
-			"calls": 7656,
+			"calls": 15125,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				" re: M",
@@ -56,7 +56,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 3575,
+			"calls": 11751,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				" re: M",
@@ -92,7 +92,7 @@
 			"args": {
 				"CLICK": true
 			},
-			"calls": 764,
+			"calls": 1761,
 			"base": "`LCLICK SECURED`",
 			"fragments": [
 				" re: M",
@@ -141,5 +141,7 @@
 				" | SUBJ "
 			]
 		}
-	]
+	],
+	"updt": 1569137746823,
+	"edit": 1
 }
