--- a/abndnd_suvkcr.release.json
+++ b/abndnd_suvkcr.release.json
@@ -1,28 +1,27 @@
 {
 	"_id": "abndnd_suvkcr.release",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "abndnd_suvkcr.release",
 	"sector": "VNP_9399",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569138720755,
+	"last_scraped": 1569141281450,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569135945916,
-	"edit": 11,
-	"scrape_ct": 0,
-	"next_scrape": 1569138780755,
+	"updt": 1569138876706,
+	"edit": 12,
+	"next_scrape": 1569187927148,
 	"category": "dice_roller",
-	"last_update": 1569138720755,
+	"last_update": 1569141281450,
 	"output": [
 		{
 			"args": {},
-			"calls": 99121,
+			"calls": 106324,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"## go",
