--- a/unknown_91xrzs.jake.json
+++ b/unknown_91xrzs.jake.json
@@ -1,28 +1,28 @@
 {
 	"_id": "unknown_91xrzs.jake",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "skip",
 	"script": "unknown_91xrzs.jake",
 	"sector": "NGC_2868",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569139435115,
+	"last_scraped": 1569141994654,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569136845693,
-	"edit": 11,
-	"scrape_ct": 6,
-	"next_scrape": 1569139495115,
+	"updt": 1569139552910,
+	"edit": 12,
+	"scrape_ct": 1,
+	"next_scrape": 1569142054654,
 	"category": "coin_flipper",
-	"last_update": 1569139435115,
+	"last_update": 1569141994654,
 	"output": [
 		{
 			"args": {},
-			"calls": 92545,
+			"calls": 113093,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"thing",
