--- a/uknown_dobbrb.viewk3ys.json
+++ b/uknown_dobbrb.viewk3ys.json
@@ -1,28 +1,28 @@
 {
 	"_id": "uknown_dobbrb.viewk3ys",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "skip",
 	"script": "uknown_dobbrb.viewk3ys",
 	"sector": "NGC_6016",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569139815672,
+	"last_scraped": 1569143541428,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569137295885,
-	"edit": 12,
-	"scrape_ct": 6,
-	"next_scrape": 1569139875672,
+	"updt": 1569140002159,
+	"edit": 13,
+	"scrape_ct": 1,
+	"next_scrape": 1569143601428,
 	"category": "plant_sim",
-	"last_update": 1569139815672,
+	"last_update": 1569143541428,
 	"output": [
 		{
 			"args": {},
-			"calls": 9008,
+			"calls": 12083,
 			"base": "c:\"jccvvi\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 .\n                 ",
 			"fragments": [
 				"deal d",
