--- a/unknown_u8unay.search.json
+++ b/unknown_u8unay.search.json
@@ -1,28 +1,28 @@
 {
 	"_id": "unknown_u8unay.search",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "skip",
 	"script": "unknown_u8unay.search",
 	"sector": "NGC_6016",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569139854974,
+	"last_scraped": 1569143792727,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569137522246,
-	"edit": 11,
-	"scrape_ct": 5,
-	"next_scrape": 1569139914974,
+	"updt": 1569140002159,
+	"edit": 12,
+	"scrape_ct": 0,
+	"next_scrape": 1569143852727,
 	"category": "plant_sim",
-	"last_update": 1569139854974,
+	"last_update": 1569143792727,
 	"output": [
 		{
 			"args": {},
-			"calls": 9846,
+			"calls": 12800,
 			"base": "c:\"l1a2jl\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 .\n                 ",
 			"fragments": [
 				"on.\\n2",
