--- a/unknown_hbhyqa.wiki.json
+++ b/unknown_hbhyqa.wiki.json
@@ -1,28 +1,28 @@
 {
 	"_id": "unknown_hbhyqa.wiki",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "skip",
 	"script": "unknown_hbhyqa.wiki",
 	"sector": "NGC_6016",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569139845765,
+	"last_scraped": 1569143732705,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569137295885,
-	"edit": 12,
-	"scrape_ct": 6,
-	"next_scrape": 1569139905765,
+	"updt": 1569140002159,
+	"edit": 13,
+	"scrape_ct": 1,
+	"next_scrape": 1569143792705,
 	"category": "coin_flipper",
-	"last_update": 1569139845765,
+	"last_update": 1569143732705,
 	"output": [
 		{
 			"args": {},
-			"calls": 84196,
+			"calls": 106749,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"am | ",
