--- a/uknown_6s2peb.dcg.json
+++ b/uknown_6s2peb.dcg.json
@@ -1,28 +1,28 @@
 {
 	"_id": "uknown_6s2peb.dcg",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "skip",
 	"script": "uknown_6s2peb.dcg",
 	"sector": "HJG_8615",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569139885029,
+	"last_scraped": 1569143905196,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569137522246,
-	"edit": 11,
-	"scrape_ct": 7,
-	"next_scrape": 1569139945029,
+	"updt": 1569140002159,
+	"edit": 12,
+	"scrape_ct": 3,
+	"next_scrape": 1569143965196,
 	"category": "dice_roller",
-	"last_update": 1569139885029,
+	"last_update": 1569143905196,
 	"output": [
 		{
 			"args": {},
-			"calls": 88150,
+			"calls": 108102,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"152 th",
