--- a/unknown_vu8sig.s.json
+++ b/unknown_vu8sig.s.json
@@ -1,28 +1,28 @@
 {
 	"_id": "unknown_vu8sig.s",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "skip",
 	"script": "unknown_vu8sig.s",
 	"sector": "NGC_6016",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569143832355,
+	"last_scraped": 1569143853560,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569140002159,
-	"edit": 12,
-	"scrape_ct": 3,
-	"next_scrape": 1569143892355,
+	"updt": 1569143839868,
+	"edit": 13,
+	"scrape_ct": 1,
+	"next_scrape": 1569143913560,
 	"category": "dice_roller",
-	"last_update": 1569143832355,
+	"last_update": 1569143853560,
 	"output": [
 		{
 			"args": {},
-			"calls": 99986,
+			"calls": 111892,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"r sid",
