--- a/unknown_x4o7lb.man.json
+++ b/unknown_x4o7lb.man.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_x4o7lb.man",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_x4o7lb.man",
 	"sector": "SPC_8584",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1560585957167
+		},
+		{
+			"type": "died",
+			"when": 1569144364917
 		}
 	],
 	"next_scrape": 1568752549514,
@@ -353,8 +357,8 @@
 			]
 		}
 	],
-	"updt": 1568686642359,
-	"edit": 105,
+	"updt": 1568709431854,
+	"edit": 106,
 	"identified": [
 		{
 			"document": "NOT FOUND",
