--- a/unknown_x4o7lb.deposit.json
+++ b/unknown_x4o7lb.deposit.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_x4o7lb.deposit",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_x4o7lb.deposit",
 	"sector": "NGC_1810",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1566601899177
+		},
+		{
+			"type": "died",
+			"when": 1569144364917
 		}
 	],
 	"next_scrape": 1569005720068,
@@ -69,6 +73,6 @@
 			]
 		}
 	],
-	"updt": 1568953543004,
-	"edit": 71
+	"updt": 1568959633014,
+	"edit": 72
 }
