--- a/uknown_lqxcau.tgtr.json
+++ b/uknown_lqxcau.tgtr.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_lqxcau.tgtr",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "uknown_lqxcau.tgtr",
 	"sector": "HJG_9716",
 	"sec_level": 4,
 	"date_added": 1563655759056,
-	"last_scraped": 1569140116717,
+	"last_scraped": 1569144959105,
 	"script_log": [
 		{
 			"type": "added",
@@ -21,17 +21,16 @@
 			}
 		]
 	],
-	"updt": 1569137746823,
-	"edit": 1431,
+	"updt": 1569140230813,
+	"edit": 1432,
 	"pl_output": "`DSorry, ``Ftgtr``D is in a testing phase right now.`",
-	"next_scrape": 1569140176717,
-	"scrape_ct": 4,
+	"next_scrape": 1569189421985,
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1569140116717,
+	"last_update": 1569144959105,
 	"output": [
 		{
 			"args": {},
-			"calls": 31163,
+			"calls": 41653,
 			"base": "`DSorry, ``Ftgtr``D is in a testing phase right now.`",
 			"fragments": [
 				"_CLST",
