--- a/unknown_yh1nxh.db.json
+++ b/unknown_yh1nxh.db.json
@@ -1,37 +1,51 @@
 {
 	"_id": "unknown_yh1nxh.db",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "skip",
 	"script": "unknown_yh1nxh.db",
 	"sector": "SPC_0993",
 	"sec_level": 4,
 	"date_added": 1569137685058,
-	"last_scraped": 1569140348925,
+	"last_scraped": 1569145450866,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569137685058
 		}
 	],
-	"scrape_ct": 14,
-	"next_scrape": 1569140408925,
+	"scrape_ct": 10,
+	"next_scrape": 1569145510866,
 	"category": "clicker",
-	"last_update": 1569140348925,
+	"last_update": 1569145450866,
 	"output": [
 		{
 			"args": {},
-			"calls": 15125,
+			"calls": 35214,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
+				"ode-gl",
+				"global",
+				"annot ",
+				"DY I c",
 				" re: M",
 				"ve that",
 				"rite th",
 				"omcode-",
 				"e this ",
+				"e that ",
 				"e opera",
+				"bal | S",
+				"AXIMUM ",
+				" to wri",
+				" are op",
+				"ve to wr",
+				"t believ",
+				"not beli",
+				"ing at M",
 				"his but ",
 				"hat I ha",
 				"are oper",
+				"C | BODY",
 				" | SUBJ "
 			],
 			"hits": [
@@ -142,6 +156,14 @@
 			]
 		}
 	],
-	"updt": 1569137746823,
-	"edit": 1
+	"updt": 1569140456663,
+	"edit": 2,
+	"retry_args": [
+		{
+			"click": true
+		},
+		{
+			"CLICK": true
+		}
+	]
 }
