--- a/uknown_lqxcau.bmp.json
+++ b/uknown_lqxcau.bmp.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_lqxcau.bmp",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "skip",
 	"script": "uknown_lqxcau.bmp",
 	"sector": "HJG_9716",
 	"sec_level": 4,
 	"date_added": 1563655759056,
-	"last_scraped": 1569140188865,
+	"last_scraped": 1569145088717,
 	"script_log": [
 		{
 			"type": "added",
@@ -21,17 +21,16 @@
 			}
 		]
 	],
-	"updt": 1569137746823,
-	"edit": 596,
+	"updt": 1569140230813,
+	"edit": 597,
 	"pl_output": "skriipts.bmp\n`FA bitmap renderer`\n\n`FUSAGE`\n\tPass an array of bytes as the parameter `Nd`.\n\n`FCAVEATS`\n\tOnly colors that are supported by hackmud with color codes will be rendered correctly, if the image contains a color that is not supported by hackmud, an allowed color with the closest hue will be used.\n\tThis only supports 8bpp and 24bpp formats with a BITMAPINFOHEADER.",
-	"next_scrape": 1569140248865,
-	"scrape_ct": 4,
+	"next_scrape": 1569185581112,
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1569140188865,
+	"last_update": 1569145088717,
 	"output": [
 		{
 			"args": {},
-			"calls": 926040,
+			"calls": 1191945,
 			"base": "skriipts.bmp\n`FA bitmap renderer`\n\n`FUSAGE`\n\tPass an array of bytes as the parameter `Nd`.\n\n`FCAVEATS`\n\tOnly colors that are supported by hackmud with color codes will be rendered correctly, if the image contains a color that is not supported by hackmud, an allowed color with the closest hue will be used.\n\tThis only supports 8bpp and 24bpp formats with a BITMAPINFOHEADER.",
 			"fragments": [
 				"you h",
