--- a/uknown_lqxcau.ls.json
+++ b/uknown_lqxcau.ls.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_lqxcau.ls",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "skip",
 	"script": "uknown_lqxcau.ls",
 	"sector": "HJG_9716",
 	"sec_level": 4,
 	"date_added": 1563655759056,
-	"last_scraped": 1569140096183,
+	"last_scraped": 1569144896951,
 	"script_log": [
 		{
 			"type": "added",
@@ -22,16 +22,16 @@
 		]
 	],
 	"pl_output": "`2=====` `Fskriipts` `2=====`\n\n`2freesmoke``1 - Tier 1 cracker (including DATA_CHECK)`\n\tskriipts.freesmoke `1{` `Nt`: `V#s.whatever``1 }`\n\n`2bestgrade``1 - Shows the best items you have. (WIP, doesn't support all items.)`\n\tskriipts.bestgrade\n\n`2inventory``1 - Browse through your stuff easily.`\n\tskriipts.inventory\n\n`2snacfarm``1 - Scrape usnack NPCs.`\n\tskriipts.snacfarm\n\n`2ei701` - (87 0 1) hackmud art gallery\n\tskriipts.ei701\n\n`FHave fun!`\n`1 - ``Cskiilaa`",
-	"next_scrape": 1569140156183,
-	"updt": 1569137746823,
-	"edit": 1079,
-	"scrape_ct": 6,
+	"next_scrape": 1569144956951,
+	"updt": 1569140230813,
+	"edit": 1080,
+	"scrape_ct": 2,
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1569140096183,
+	"last_update": 1569144896951,
 	"output": [
 		{
 			"args": {},
-			"calls": 674037,
+			"calls": 873568,
 			"base": "`2=====` `Fskriipts` `2=====`\n\n`2freesmoke``1 - Tier 1 cracker (including DATA_CHECK)`\n\tskriipts.freesmoke `1{` `Nt`: `V#s.whatever``1 }`\n\n`2bestgrade``1 - Shows the best items you have. (WIP, doesn't support all items.)`\n\tskriipts.bestgrade\n\n`2inventory``1 - Browse through your stuff easily.`\n\tskriipts.inventory\n\n`2snacfarm``1 - Scrape usnack NPCs.`\n\tskriipts.snacfarm\n\n`2ei701` - (87 0 1) hackmud art gallery\n\tskriipts.ei701\n\n`FHave fun!`\n`1 - ``Cskiilaa`",
 			"fragments": [
 				"ack f",
