--- a/unknown_7zlz3p.list.json
+++ b/unknown_7zlz3p.list.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_7zlz3p.list",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "skip",
 	"script": "unknown_7zlz3p.list",
 	"sector": "VNP_9399",
 	"sec_level": 4,
 	"date_added": 1565331613626,
-	"last_scraped": 1569140498939,
+	"last_scraped": 1569146043400,
 	"script_log": [
 		{
 			"type": "added",
@@ -22,16 +22,15 @@
 		]
 	],
 	"pl_output": "`phackmud` `tQuest Board`\n\nThis utility helps you get on your feet by providing rewards for completing in-game quests and objectives!\n\nSimply run: quest.run {name: \"quest_name\", s: #s.script.name, args: {}} when you want to complete a quest.\nThis allows us to monitor your progress and reward you once it's been complete!\n`pHint` When a script asks you to pass an argument, add it to `Nargs` instead\n\n`fOfficial` `tQuests`\n`c(These are quests created by the game developers)`\n\n- aon.memb3rs_only\n- pica.nubloops\n- skimmerite.learn_to_read\n- suborbital_airlines.bulletin\n- vacuum_rescue.responder\n",
-	"next_scrape": 1569140558939,
-	"updt": 1569137972638,
-	"edit": 1207,
-	"scrape_ct": 3,
+	"next_scrape": 1569187308995,
+	"updt": 1569140681968,
+	"edit": 1208,
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1569140498939,
+	"last_update": 1569146043400,
 	"output": [
 		{
 			"args": {},
-			"calls": 81687,
+			"calls": 106433,
 			"base": "`phackmud` `tQuest Board`\n\nThis utility helps you get on your feet by providing rewards for completing in-game quests and objectives!\n\nSimply run: quest.run {name: \"quest_name\", s: #s.script.name, args: {}} when you want to complete a quest.\nThis allows us to monitor your progress and reward you once it's been complete!\n`pHint` When a script asks you to pass an argument, add it to `Nargs` instead\n\n`fOfficial` `tQuests`\n`c(These are quests created by the game developers)`\n\n- aon.memb3rs_only\n- pica.nubloops\n- skimmerite.learn_to_read\n- suborbital_airlines.bulletin\n- vacuum_rescue.responder\n",
 			"fragments": [
 				"iling ",
