--- a/uknown_56z58x.clear.json
+++ b/uknown_56z58x.clear.json
@@ -1,28 +1,27 @@
 {
 	"_id": "uknown_56z58x.clear",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "skip",
 	"script": "uknown_56z58x.clear",
 	"sector": "NGC_1025",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569140650767,
+	"last_scraped": 1569146616538,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569138199176,
-	"edit": 14,
-	"scrape_ct": 3,
-	"next_scrape": 1569140710767,
+	"updt": 1569140681968,
+	"edit": 15,
+	"next_scrape": 1569190578935,
 	"category": "plant_sim",
-	"last_update": 1569140650767,
+	"last_update": 1569146616538,
 	"output": [
 		{
 			"args": {},
-			"calls": 10731,
+			"calls": 13863,
 			"base": "c:\"ip9w6z\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 .\n                 ",
 			"fragments": [
 				"is st",
