--- a/uknown_bofn3d.external_yg40iz.json
+++ b/uknown_bofn3d.external_yg40iz.json
@@ -1,24 +1,23 @@
 {
 	"_id": "uknown_bofn3d.external_yg40iz",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "skip",
 	"script": "uknown_bofn3d.external_yg40iz",
 	"sector": "K_2217",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569140809332,
+	"last_scraped": 1569147179449,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569138426263,
-	"edit": 13,
-	"scrape_ct": 1,
-	"next_scrape": 1569140869332,
+	"updt": 1569140907219,
+	"edit": 14,
+	"next_scrape": 1569187443467,
 	"category": "plant_sim",
-	"last_update": 1569140809332,
+	"last_update": 1569147179449,
 	"output": [
 		{
 			"args": {},
@@ -50,7 +49,7 @@
 		},
 		{
 			"args": {},
-			"calls": 8875,
+			"calls": 11453,
 			"base": "c:\"85lkwv\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 Á\n                 ",
 			"fragments": [
 				"ly 28",
