--- a/unknown_1fif7m.specs.json
+++ b/unknown_1fif7m.specs.json
@@ -1,28 +1,28 @@
 {
 	"_id": "unknown_1fif7m.specs",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "skip",
 	"script": "unknown_1fif7m.specs",
 	"sector": "K_2217",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569140819587,
+	"last_scraped": 1569147247071,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569138426263,
-	"edit": 12,
-	"scrape_ct": 9,
-	"next_scrape": 1569140879587,
+	"updt": 1569140907219,
+	"edit": 13,
+	"scrape_ct": 5,
+	"next_scrape": 1569147307071,
 	"category": "plant_sim",
-	"last_update": 1569140819587,
+	"last_update": 1569147247071,
 	"output": [
 		{
 			"args": {},
-			"calls": 8766,
+			"calls": 11030,
 			"base": "c:\"w9l07b\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 .\n                 ",
 			"fragments": [
 				"'re ma",
