--- a/unknown_ll1h7z.fishie_tank.json
+++ b/unknown_ll1h7z.fishie_tank.json
@@ -1,24 +1,23 @@
 {
 	"_id": "unknown_ll1h7z.fishie_tank",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "skip",
 	"script": "unknown_ll1h7z.fishie_tank",
 	"sector": "VNP_9275",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569140770123,
+	"last_scraped": 1569147046679,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569138426263,
-	"edit": 12,
-	"scrape_ct": 4,
-	"next_scrape": 1569140830123,
+	"updt": 1569140907219,
+	"edit": 13,
+	"next_scrape": 1569190181416,
 	"category": "plant_sim",
-	"last_update": 1569140770123,
+	"last_update": 1569147046679,
 	"output": [
 		{
 			"args": {},
@@ -52,7 +51,7 @@
 		},
 		{
 			"args": {},
-			"calls": 8309,
+			"calls": 12049,
 			"base": "c:\"tluzmp\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 Ã\n                 ",
 			"fragments": [
 				" in o",
