--- a/unknown_puquph.weather.json
+++ b/unknown_puquph.weather.json
@@ -1,28 +1,27 @@
 {
 	"_id": "unknown_puquph.weather",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "skip",
 	"script": "unknown_puquph.weather",
 	"sector": "NGC_1025",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569140722415,
+	"last_scraped": 1569146866877,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569138199176,
-	"edit": 12,
-	"scrape_ct": 4,
-	"next_scrape": 1569140782415,
+	"updt": 1569140907219,
+	"edit": 13,
+	"next_scrape": 1569192586238,
 	"category": "coin_flipper",
-	"last_update": 1569140722415,
+	"last_update": 1569146866877,
 	"output": [
 		{
 			"args": {},
-			"calls": 97176,
+			"calls": 118878,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"ses. T",
