--- a/uknown_92vtu0.mktable.json
+++ b/uknown_92vtu0.mktable.json
@@ -1,28 +1,27 @@
 {
 	"_id": "uknown_92vtu0.mktable",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "skip",
 	"script": "uknown_92vtu0.mktable",
 	"sector": "NGC_1025",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569140669379,
+	"last_scraped": 1569146675733,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569138199176,
-	"edit": 12,
-	"scrape_ct": 4,
-	"next_scrape": 1569140729379,
+	"updt": 1569140681968,
+	"edit": 13,
+	"next_scrape": 1569190869027,
 	"category": "plant_sim",
-	"last_update": 1569140669379,
+	"last_update": 1569146675733,
 	"output": [
 		{
 			"args": {},
-			"calls": 10218,
+			"calls": 13512,
 			"base": "c:\"c6k61e\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 .\n                 ",
 			"fragments": [
 				"irst.",
