--- a/uknown_g6pj2l.obtuse.json
+++ b/uknown_g6pj2l.obtuse.json
@@ -1,28 +1,28 @@
 {
 	"_id": "uknown_g6pj2l.obtuse",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "skip",
 	"script": "uknown_g6pj2l.obtuse",
 	"sector": "NGC_1025",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569140679023,
+	"last_scraped": 1569146737723,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569138199176,
-	"edit": 12,
-	"scrape_ct": 3,
-	"next_scrape": 1569140739023,
+	"updt": 1569140907219,
+	"edit": 13,
+	"scrape_ct": 0,
+	"next_scrape": 1569146797723,
 	"category": "coin_flipper",
-	"last_update": 1569140679023,
+	"last_update": 1569146737723,
 	"output": [
 		{
 			"args": {},
-			"calls": 107112,
+			"calls": 118138,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"t? ## ",
