--- a/unknown_0axb7v.npc.json
+++ b/unknown_0axb7v.npc.json
@@ -1,28 +1,28 @@
 {
 	"_id": "unknown_0axb7v.npc",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "skip",
 	"script": "unknown_0axb7v.npc",
 	"sector": "NGC_1025",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569140689530,
+	"last_scraped": 1569146806308,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569138199176,
-	"edit": 12,
-	"scrape_ct": 9,
-	"next_scrape": 1569140749530,
+	"updt": 1569140907219,
+	"edit": 13,
+	"scrape_ct": 5,
+	"next_scrape": 1569146866308,
 	"category": "plant_sim",
-	"last_update": 1569140689530,
+	"last_update": 1569146806308,
 	"output": [
 		{
 			"args": {},
-			"calls": 8314,
+			"calls": 10567,
 			"base": "c:\"j04yl2\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 .\n                 ",
 			"fragments": [
 				"SUBJ ",
