--- a/uknown_42opr9.scripts.json
+++ b/uknown_42opr9.scripts.json
@@ -1,28 +1,27 @@
 {
 	"_id": "uknown_42opr9.scripts",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "uknown_42opr9.scripts",
 	"sector": "HJG_8314",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569141743499,
+	"last_scraped": 1569149238267,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569139328022,
-	"edit": 12,
-	"scrape_ct": 2,
-	"next_scrape": 1569141803499,
+	"updt": 1569148576529,
+	"edit": 14,
+	"next_scrape": 1569190454126,
 	"category": "coin_flipper",
-	"last_update": 1569141743499,
+	"last_update": 1569149238267,
 	"output": [
 		{
 			"args": {},
-			"calls": 104822,
+			"calls": 126736,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"LETE ",
