--- a/uknown_4yl1qa.bot_scam_do_not_run.json
+++ b/uknown_4yl1qa.bot_scam_do_not_run.json
@@ -1,28 +1,27 @@
 {
 	"_id": "uknown_4yl1qa.bot_scam_do_not_run",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "uknown_4yl1qa.bot_scam_do_not_run",
 	"sector": "SPC_2784",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569141692970,
+	"last_scraped": 1569149138292,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569139328022,
-	"edit": 12,
-	"scrape_ct": 2,
-	"next_scrape": 1569141752970,
+	"updt": 1569148576529,
+	"edit": 14,
+	"next_scrape": 1569192507524,
 	"category": "dice_roller",
-	"last_update": 1569141692970,
+	"last_update": 1569149138292,
 	"output": [
 		{
 			"args": {},
-			"calls": 115933,
+			"calls": 135618,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"igned",
