--- a/uknown_glqjgs.random.json
+++ b/uknown_glqjgs.random.json
@@ -1,28 +1,27 @@
 {
 	"_id": "uknown_glqjgs.random",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "uknown_glqjgs.random",
 	"sector": "NGC_1069",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569147839868,
+	"last_scraped": 1569148745975,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569141358591,
-	"edit": 14,
-	"scrape_ct": 1,
-	"next_scrape": 1569147899868,
+	"updt": 1569147900658,
+	"edit": 15,
+	"next_scrape": 1569191481131,
 	"category": "coin_flipper",
-	"last_update": 1569147839868,
+	"last_update": 1569148745975,
 	"output": [
 		{
 			"args": {},
-			"calls": 96384,
+			"calls": 103848,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"w you",
