--- a/uknown_l21bqu.public.json
+++ b/uknown_l21bqu.public.json
@@ -1,28 +1,27 @@
 {
 	"_id": "uknown_l21bqu.public",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "uknown_l21bqu.public",
 	"sector": "HJG_4380",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569149037213,
+	"last_scraped": 1569149930062,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569148576529,
-	"edit": 14,
-	"scrape_ct": 2,
-	"next_scrape": 1569149097213,
+	"updt": 1569149928515,
+	"edit": 16,
+	"next_scrape": 1569195561058,
 	"category": "plant_sim",
-	"last_update": 1569149037213,
+	"last_update": 1569149930062,
 	"output": [
 		{
 			"args": {},
-			"calls": 11177,
+			"calls": 12717,
 			"base": "c:\"yt7uwj\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 .\n                 ",
 			"fragments": [
 				"scribe",
