--- a/unknown_f43glc.pub_7lfra1.json
+++ b/unknown_f43glc.pub_7lfra1.json
@@ -1,28 +1,27 @@
 {
 	"_id": "unknown_f43glc.pub_7lfra1",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "unknown_f43glc.pub_7lfra1",
 	"sector": "HJG_8314",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569148333512,
+	"last_scraped": 1569149306594,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569141811521,
-	"edit": 13,
-	"scrape_ct": 0,
-	"next_scrape": 1569148393512,
+	"updt": 1569148576529,
+	"edit": 14,
+	"next_scrape": 1569195646863,
 	"category": "coin_flipper",
-	"last_update": 1569148333512,
+	"last_update": 1569149306594,
 	"output": [
 		{
 			"args": {},
-			"calls": 127436,
+			"calls": 134725,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"X7B_S",
