--- a/unknown_5umh34.private.json
+++ b/unknown_5umh34.private.json
@@ -1,28 +1,27 @@
 {
 	"_id": "unknown_5umh34.private",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "unknown_5umh34.private",
 	"sector": "K_0542",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569148473607,
+	"last_scraped": 1569149527461,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569147672462,
-	"edit": 14,
-	"scrape_ct": 0,
-	"next_scrape": 1569148533607,
+	"updt": 1569148576529,
+	"edit": 15,
+	"next_scrape": 1569190167656,
 	"category": "plant_sim",
-	"last_update": 1569148473607,
+	"last_update": 1569149527461,
 	"output": [
 		{
 			"args": {},
-			"calls": 13203,
+			"calls": 13948,
 			"base": "c:\"gmmxgj\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 .\n                 ",
 			"fragments": [
 				"ot a ",
