--- a/unknown_bjl3my.pulse.json
+++ b/unknown_bjl3my.pulse.json
@@ -1,28 +1,27 @@
 {
 	"_id": "unknown_bjl3my.pulse",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "unknown_bjl3my.pulse",
 	"sector": "VNP_9399",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569148814924,
+	"last_scraped": 1569149770078,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569148125131,
-	"edit": 14,
-	"scrape_ct": 0,
-	"next_scrape": 1569148874924,
+	"updt": 1569149027633,
+	"edit": 15,
+	"next_scrape": 1569190732709,
 	"category": "coin_flipper",
-	"last_update": 1569148814924,
+	"last_update": 1569149770078,
 	"output": [
 		{
 			"args": {},
-			"calls": 121192,
+			"calls": 129935,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"you c",
