--- a/unknown_tg52f6.and_down_smash.json
+++ b/unknown_tg52f6.and_down_smash.json
@@ -1,28 +1,27 @@
 {
 	"_id": "unknown_tg52f6.and_down_smash",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "unknown_tg52f6.and_down_smash",
 	"sector": "K_0542",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569148504445,
+	"last_scraped": 1569149537579,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569147672462,
-	"edit": 14,
-	"scrape_ct": 0,
-	"next_scrape": 1569148564445,
+	"updt": 1569148576529,
+	"edit": 15,
+	"next_scrape": 1569195334662,
 	"category": "coin_flipper",
-	"last_update": 1569148504445,
+	"last_update": 1569149537579,
 	"output": [
 		{
 			"args": {},
-			"calls": 120472,
+			"calls": 128451,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"e tim",
